- Added Header Component with customisable name tag - Added Recent Matches component with customisable match data input 	- Added Match Details Overlay component to go alongside that (Kinda ugly rn) - Added Hero Banner component but ended up stripping it so it is literally just an image - Changed sidebar from `position:absolute` to `position: fixed` in order to stop the sidebar from overlapping with the header. - Added `min-width: 100px;` to the sidebar so it is usable on mobile. - Changed the default font to OpenDyslexic-Regular

--- a/website/src/components/Sidebar/index.scss
+++ b/website/src/components/Sidebar/index.scss
@@ -1,11 +1,13 @@
 .nav-bar{
-    background:  #000028;
-    width: 6%;
-    height: 100%;
-    position: absolute;
+    position: fixed;
     top: 0;
+    left: 0;
+    height: 100%;
+    width: 6%;
+    background:  #000028;
     z-index: 3;
     min-height: 500px;
+    min-width: 100px;
 
     .logo {
         display: block;
